# tmap_mcp

./: .gitignore  README.md  example.py  mcp_server.py  pyproject.toml  run_mcp_server.bat  run_setup_cursor.bat  setup_cursor.py
tmap_api/: README.md  __init__.py  setup.py  tmap_api.py
