[tool.poetry]
name = "tmap-mcp"
version = "0.1.0"
description = ""
authors = ["bm1120 <bm1120@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymcp = "^0.1.0"
ipykernel = "^6.29.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
